fixing the z-index in the cardscience

--- a/src/Components/ScienceComponents/Cardscience.css
+++ b/src/Components/ScienceComponents/Cardscience.css
@@ -32,7 +32,6 @@
     height: 100px;
     padding: 5px;
     position: absolute;
-    z-index: 1000;
     top: -40px;
     left: calc(50% - 75px);
     color: var(--color_4);
@@ -42,5 +41,4 @@
     font-size: 1.85rem;
     line-height: 2rem;
     text-align: center;
-    z-index: 1000;
 }
